<resources>
    <string name="app_name">przychodnia</string>
    <string name="preference_file_key">pl.edu.dblach.przychodnia.PREFERENCE_FILE_KEY</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <!-- wspólne -->
    <string name="close">Zamknij</string>
    <string name="save">Zapisz</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="date">Data</string>
    <string name="time">Godzina</string>
    <string name="doctor">Lekarz</string>
    <string name="clinic">Poradnia</string>
    <string name="note">Notatka</string>
    <string name="cancelled">Odwołana</string>
    <string name="room">Pomieszczenie</string>
    <string name="days">Dni</string>
    <string name="edit">Edytuj</string>
    <string name="cancel_appointment">Odwołaj</string>

    <!-- menu -->
    <string name="menu_main_label">Początek</string>
    <string name="menu_settings_label">Ustawienia</string>
    <string name="menu_appointments_label">Moje wizyty</string>
    <string name="menu_new_appointment_label">Umów wizytę</string>
    <string name="menu_news_label">Wiadomości</string>

    <!-- dodawanie wizyty -->
    <string name="new_appointment_tab_clinic_label">Poradnia</string>
    <string name="new_appointment_tab_doctor_label">Lekarz</string>
    <string name="new_appointment_tab_doctor_error_select_clinic_first">Nie wybrano poradni.</string>
    <string name="new_appointment_tab_time_label">Godzina</string>
    <string name="new_appointment_tab_time_btn_previousday">&lt;</string>
    <string name="new_appointment_tab_time_btn_nextday">&gt;</string>
    <string name="new_appointment_tab_time_appointment_label">Zarezerwowane</string>
    <string name="new_appointment_tab_time_no_admissions">W tym dniu wybrany lekarz nie przyjmuje.\n\nNajbliższa możliwa data: %nd</string>
    <string name="new_appointment_tab_time_no_doctor_selected">Nie wybrano lekarza.</string>
    <string name="new_appointment_tab_time_select_hour">WYBIERZ GODZINĘ</string>
    <string name="new_appointment_tab_time_no_time_selected">Musisz wybrać godzinę.</string>
    <string name="new_appointment_tab_time_error_no_appointment">W tej godzinie lekarz nie przyjmuje.</string>
    <string name="new_appointment_tab_time_error_busy">Wybrana godzina jest zajęta.</string>
    <string name="new_appointment_tab_time_success">Wizyta została dodana pomyślnie.</string>
    <string name="new_appointment_tab_time_addtocalendar_question">Wizyta została dodana pomyślnie. Czy chcesz zapisać ją w kalendarzu systemowym?</string>

    <!-- ustawienia -->
    <string name="settings_hostname">Serwer</string>
    <string name="settings_username">Nazwa użytkownika</string>
    <string name="settings_password">Hasło</string>
    <string name="settings_connection">Połączenie z serwerem</string>
    <string name="settings_saved">Ustawienia zostały zapisane</string>
    <string name="settings_my_appointments">Moje wizyty</string>
    <string name="settings_my_appointments_count_description">Liczba wizyt do wyświetlenia</string>
    <string name="settings_calendar_integration_label">Integracja z kalendarzem</string>
    <string name="settings_calendar_integration_yes">Zawsze zapisuj wizyty w kalendarzu systemowym</string>
    <string name="settings_calendar_integration_ask">Pytaj za każdym razem</string>
    <string name="settings_calendar_integration_no">Nigdy nie zapisuj</string>
    <string name="settings_configuration">Konfiguracja</string>
    <string name="settings_configuration_time_to_edit">Czas na edycję wizyty:</string>

    <!-- error: no login data -->
    <string name="error_no_login_data_title">Uwaga</string>
    <string name="error_no_login_data_message">Brak danych logowania - aplikacja nie będzie działać poprawnie, dopóki nie wprowadzisz ich w ustawieniach.</string>
    <string name="error_no_login_data_open_settings">Otwórz ustawienia</string>
    <string name="main_page_hello">Ładowanie...</string>
    <string name="main_page_no_login">Wprowadź nazwę użytkownika i hasło.</string>

    <!-- dni tygodnia -->
    <string name="weekday_monday">Poniedziałek</string>
    <string name="weekday_tuesday">Wtorek</string>
    <string name="weekday_wednesday">Środa</string>
    <string name="weekday_thursday">Czwartek</string>
    <string name="weekday_friday">Piątek</string>
    <string name="weekday_saturday">Sobota</string>
    <string name="weekday_sunday">Niedziela</string>

    <string name="hello_blank_fragment">Ładowanie...</string>
    <string name="loading">Ładowanie...</string>

    <!-- strona główna -->
    <string name="latest_news">Najnowsze wiadomości</string>

    <!-- edycja wizyty -->
    <string name="edit_appointment_confirm_cancel">Czy na pewno chcesz odwołać wizytę?</string>
    <string name="edit_appointment_cancel_error">Nie udało się odwołać wizyty.</string>
    <string name="edit_appointment_success">Wizyta została zmieniona pomyślnie.</string>

    <string name="logged_in_as">Zalogowany jako:</string>
    <string name="not_logged_in">Niezalogowany</string>
</resources>
