<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/main"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_main_label"></item>
        <item
            android:id="@+id/news"
            android:icon="@android:drawable/ic_dialog_email"
            android:title="@string/menu_news_label" />
        <item
            android:id="@+id/appointments"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/menu_appointments_label" />
        <item
            android:id="@+id/new_appointment"
            android:icon="@android:drawable/ic_menu_add"
            android:title="@string/menu_new_appointment_label" />
        <item
            android:id="@+id/settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_settings_label"></item>
    </group>
</menu>